--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,9 @@
 [submodule "workspace/src/razor_imu_9dof"]
 	path = workspace/src/razor_imu_9dof
 	url = https://github.com/KristofRobot/razor_imu_9dof
+[submodule "workspace/src/racecar"]
+	path = workspace/src/racecar
+	url = https://github.com/mit-racecar/racecar
+[submodule "workspace/src/vesc"]
+	path = workspace/src/vesc
+	url = https://github.com/mit-racecar/vesc
